dataset1235/2025-2/805158916/users/3688932496/executions/2651470117_704983377.log
== RUN (2025-08-20 22:48:54)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(round(Pot))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:36:21)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Informe um valor para Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Informe um valor para Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Informe um valor para Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Informe um valor para Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Informe um valor para Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Informe um valor para Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:49:38)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X
print("")
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:46:34)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print("")
print(R)
print("")
print(Q2)
print("")
print(Pr)
print("")
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:47:29)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print("")
print(R)
print("")
print(Q2)
print("")
print(Pr)
print("")
print(round(Pot))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:35:04)
-- CODE: 
X = int(input(input("Informe um valor para X: ")))
Y = int(input(input("Informe um valor para Y: ")))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:34:41)
-- CODE: 
X = int(input(input("Informe um valor para X: ")))
Y = int(input(input("Informe um valor para Y: ")))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Y = int(input(input("Informe um valor para Y: ")))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:53:00)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3
print("")
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:45:21)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = x * Y
Pot = Y ** X

print(Q1)
print("")
print(R)
print("")
print(Q2)
print("")
print(Pr)
print("")
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Pr = x * Y
         ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Pr = x * Y
         ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Pr = x * Y
         ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Pr = x * Y
         ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Pr = x * Y
         ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Pr = x * Y
         ^
NameError: name 'x' is not defined. Did you mean: 'X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 20:54:14)
-- CODE: 
print("Informe um valor :")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Informe um valor :
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Informe um valor :
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Informe um valor :
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Informe um valor :
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Informe um valor :
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Informe um valor :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:35:58)
-- CODE: 
X = int (input("Informe um valor para X: "))
Y = int (input("Informe um valor para Y: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Informe um valor para X: Informe um valor para Y:
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Informe um valor para X: Informe um valor para Y:
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Informe um valor para X: Informe um valor para Y:
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Informe um valor para X: Informe um valor para Y:
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Informe um valor para X: Informe um valor para Y:
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Informe um valor para X: Informe um valor para Y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:53:10)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3
print("")
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:52:43)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3
print("")
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:46:06)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print("")
print(R)
print("")
print(Q2)
print("")
print(Pr)
print("")
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:48:17)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print("")
print(R)
print("")
print(Q2)
print("")
print(Pr)
print("")
print(round(Pot))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:49:12)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X
print("")
print(Q1)
print(R)
print(Q2)
print(Pr)
print(round(Pot))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:52:23)
-- CODE: 
X = int (input("Informe um valor para X: "))
print("")
Y = int (input("Informe um valor para Y: "))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3
print("")
print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
